8개 포스트 비판적 분석 추가 — "이 기술은 완벽하지 않다"
- Kafka: acks=all 함정, auto.commit off도 at-least-once
- Cache: 스탬피드, 캐시-DB 불일치 Race Condition
- MSA: "팀 5명 이하면 모놀리스가 답"
- @Transactional: private/self-invocation/checked exception 함정
- WebFlux: "JPA 쓰면 Virtual Thread가 답"
- DB 인덱스: 쓰기 저하, 옵티마이저 무시 케이스
- GC: G1도 Mixed GC시 수십ms STW, MaxGCPauseMillis는 목표일 뿐

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>